<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/exercise_constraint_layout">


    <EditText
        android:id="@+id/exercise_name"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:gravity="start"
        android:hint="@string/exercise_name"
        android:inputType="textCapSentences"
        android:nextFocusRight="@+id/exercise_weight"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill"
        tools:text="Squat"
        android:textColorHint="#FFF"/>

    <EditText
        android:id="@+id/exercise_weight"
        android:layout_width="98dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:gravity="start"
        android:hint="@string/Weight_kg"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:nextFocusRight="@+id/exercise_reps"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/exercise_reps"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/exercise_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="22222"
        android:textColorHint="#FFF"
        android:textColor="#FFF"/>

    <TextView
        android:id="@+id/reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/reps"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="#FFF"/>

    <EditText
        android:id="@+id/exercise_reps"
        android:layout_width="62dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/transparent"
        android:gravity="start"
        android:hint="@string/Reps"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textSize="16sp"
        android:textStyle="bold"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="120"
        android:textColorHint="#FFF"
        android:textColor="#FFF"/>

    <TextView
        android:id="@+id/lbs"
        android:layout_width="25dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:text="@string/kg"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/exercise_weight"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="#FFF" />

</androidx.constraintlayout.widget.ConstraintLayout>